--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Elephants</h1>
     <div class='elephant-info'></div>
+    <div class='elephant-hero'></div>
     <ul class='elephant-list'></ul>
     <script src='elephant.js' ></script>
   </body>
